--- a/src/assets/css/templatemo-space-dynamic.css
+++ b/src/assets/css/templatemo-space-dynamic.css
@@ -366,7 +366,7 @@ header
 .header-area .main-nav .nav {
   float: right;
   margin-top: 30px;
-  margin-right: -50px;
+  margin-right: 68px;
   background-color: transparent;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -679,7 +679,7 @@ header
   }
 
   .header-area {
-    background-color: #3DC9A1 !important;
+    background-color:#208C84 !important;
     padding: 0px 15px;
     height: 100px;
     box-shadow: none;
@@ -1491,8 +1491,8 @@ Footer Style
 */
 
 footer p {
-  text-align: center;
-  margin: 30px 0px 45px 0px;
+  /* text-align: center; */
+  /* margin: 30px 0px 45px 0px; */
 }
 
 footer p a {
@@ -1693,4 +1693,12 @@ img.menu-logo {
       margin-top: -48px;      
       /* position: absolute;
       left: 33px; */
+}
+
+.add-cstspan {
+  float: right;
+}
+.connect-logo-class{
+  width: 30px;
+  height: 30px;
 }
