--- a/src/assets/css/services.css
+++ b/src/assets/css/services.css
@@ -11,10 +11,19 @@
     /* border: 1px black solid; */
 }
 
-.service-wrapper {
+/* @media only screen and(max-width: 480px) {
+    .services-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }   
+} */
+
+/* .service-wrapper {
     margin: 2%;
     padding: 2%;
-    /* border: 1px black dashed; */
+    
     height: 100%;
     width: 100%; 
     border-radius: 5px;    
@@ -22,7 +31,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-}
+} */
 
 .services-left-container {
     background-color: white;
@@ -30,7 +39,7 @@
     flex-direction: column;
     /* margin-right: 40%; */
     width: 100%;
-    
+    /* border: 1px solid black; */
    
 }
 
@@ -114,16 +123,48 @@ color: #191919;
 .first-column {
     display: flex;
     flex-direction: column;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .client-container {
     margin-left: 1%;
     margin-right: 1%;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    /* background-image: url('../images/rectangle-105.png'); */
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
-/* .client-container-img-2 {
-    background-image: url('../images/rectangle-104.png');
-} */
+.back-images {
+    height: 247px;
+    /* width: 468px; */
+    width: 468px;
+    margin-right: 1%;
+   background-image: url('../images/rectangle-104.png');
+
+}
+
+.back-images-dark {
+    height: 247px;
+    /* width: 468px; */
+    width: 468px;
+    margin-right: 1%;
+    background-image: url('../images/rectangle-105.png');
+}
+
+.client-img {
+    position: absolute;
+    height: 58px;
+    width: 59px;
+    border-radius: 0px;
+}
+
+.seeMore {
+    width: 389px;
+    height: 37px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 167.5%;
+    color: #208C84;
+}
