--- a/src/assets/css/first-container.css
+++ b/src/assets/css/first-container.css
@@ -24,16 +24,23 @@ background: #3DC9A1;
 .hero_section_first
 {
     background: #f4fefa;
-    height: 800px;
+    height: 630px;
 }
 
-/* .hero_section_first{
-    height: 700px;
-    width: auto;
-    background-image: url("../images/Rectangle 57 (1).jpg");
-} */
-
+ 
 .cstm_img_btn {
     width: 208px;
     text-align: left;
  }
+ 
+ 
+.main-container-data.container {
+    /* width: 1545px; */
+    margin-left: 28px;
+    /* margin-right: 79px !important; */
+    padding: 100px;
+}
+.we_coonect_section {
+    background: #f4fefa;
+    height: 900px;
+}
