--- a/src/assets/css/proservices.css
+++ b/src/assets/css/proservices.css
@@ -4,14 +4,14 @@
     /* margin-left: 5%;
     margin-right: 5%; */
     /* padding: 5px; */
-    
+
 }
 
 .innerContainer {
     display: flex;
     /* border: 1px solid black; */
     justify-content: space-between;
-}   
+}
 
 .left-Container {
     /* border: 1px black dashed; */
@@ -19,10 +19,10 @@
     height: 500px;
     background: #C2DDE4;
     border-radius: 5px;
-    background-image: url('../images/group-570.png');
+    background-image: url('../images/Grouasdp570.png');
     background-size: 720px 480px;
     background-repeat: no-repeat;
-   
+
 }
 
 .pro-services {
@@ -39,18 +39,18 @@
     margin-left: 5%;
 }
 
-.appointment{
+.appointment {
     /* position: absolute; */
-width: 607px;
-height: 78px;
-margin-left: 5%;
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 15px;
-line-height: 167.5%;
-/* or 33px */
-color: #191919;
+    width: 607px;
+    height: 78px;
+    margin-left: 5%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 167.5%;
+    /* or 33px */
+    color: #191919;
 }
 
 .appointment-grp {
@@ -58,6 +58,7 @@ color: #191919;
     width: 109%;
     margin-bottom: 10%;
 }
+
 .appointment-text {
     height: 40%;
     width: 40%;
@@ -92,7 +93,7 @@ color: #191919;
 .legal-header {
     width: 400px;
     height: 100px;
-    
+
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
@@ -101,4 +102,4 @@ color: #191919;
     margin-top: 13%;
     margin-left: 5%;
     color: #3F3309;
-}   
+}
