--- a/src/assets/css/third-container.css
+++ b/src/assets/css/third-container.css
@@ -16,20 +16,20 @@
     border-radius: 15px;
     padding: 20px;
 }
-.user-data{
+/* .user-data{
 width: 543px;
 height: 78px;
 
 background: #E8F8F2;
 border-radius: 10px;
-}
-.user-data-data{
+} */
+/* .user-data-data{
     width: 543px;
     height: 78px;
     
     background: #F4F4F4;
     border-radius: 10px;  
-}
+} */
 .img-data{
 width: 54.69px;
 height: 53.77px;
