--- a/src/Component/Home/home.css
+++ b/src/Component/Home/home.css
@@ -4,20 +4,20 @@
 }
 
 #mainContentRight1{
-    width: 470px;
-height: 569px;
+width: 300px;
+height: 500px;
 
 background: #C6EEE2;
 }
 #mainContentRight2{
-    width: 470px;
-height: 569px;
+    width: 300px;
+    height: 500px;
 margin-top: 180px;
 background: #C2DDE4;
 }
 #mainContentRight3{
-    width: 470px;
-height: 569px;
+    width: 300px;
+    height: 500px;
 
 background: #EDEEC6;
 }
@@ -40,7 +40,7 @@ background: #EDEEC6;
     font-weight: 700;
     font-size: 96px;
     color: #3F3309;
-        text-align: end;
+    text-align: end;
     
 }
 .frame{
@@ -76,9 +76,6 @@ font-style: normal;
 font-weight: 400;
 font-size: 18px;
 line-height: 167.5%;
-/* or 30px */
-
-
 color: #093F38;
 
 }
@@ -137,7 +134,7 @@ color: #156075;
 }
 
 .text {
-    font-family: 'Poppins';
+font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
@@ -145,6 +142,7 @@ line-height: 167.5%;
 text-align: center;
 letter-spacing: 0.06em;
 color: #3DC9A1;
+margin-top: 20px;
 }
 
 .text1 { 
