--- a/src/Component/Home/home.css
+++ b/src/Component/Home/home.css
@@ -4,21 +4,19 @@
 }
 
 #mainContentRight1{
-width: 300px;
 height: 500px;
-
+margin-left: 12px;
 background: #C6EEE2;
 }
 #mainContentRight2{
-    width: 300px;
     height: 500px;
 margin-top: 180px;
 background: #C2DDE4;
+margin-left: 12px;
 }
 #mainContentRight3{
-    width: 300px;
     height: 500px;
-
+    margin-left: 12px;
 background: #EDEEC6;
 }
 .card1-number{
