--- a/src/assets/css/templatemo-space-dynamic.css
+++ b/src/assets/css/templatemo-space-dynamic.css
@@ -395,20 +395,9 @@ header
 
  .header-area .main-nav .nav li:last-child {
    padding-right: 0px;
-   /* padding-left: 40px; *
-}
-
-.header-area .main-nav .nav li:last-child a,
-.background-header .main-nav .nav li:last-child a {
-  color: #fff !important;
-  /* padding: 0px 20px; */
-   /* font-weight: 400; */
+   
  }
-
- /* .header-area .main-nav .nav li:last-child a:hover,
-.header-area .main-nav .nav li:last-child a.active {
-  color: #fff !important;
-} */
+ 
 
  .header-area .main-nav .nav li a {
    display: block;
@@ -441,11 +430,7 @@ header
    opacity: 1;
  }
 
- /* .header-area .main-nav .nav li:last-child a:hover,
-.background-header .main-nav .nav li:last-child a:hover {
-  background-color: #03a4ed;
-} */
-
+ 
  .header-area .main-nav .nav li.submenu {
    position: relative;
    padding-right: 30px;
@@ -804,6 +789,14 @@ header
      display: flex !important;
    }
  }
+
+ @media (max-width: 768px) {
+  .header-area .main-nav .nav {
+    display: none !important;
+  }
+}
+
+ 
 
  /* 
 ---------------------------------------------
@@ -1935,7 +1928,7 @@ responsive
    margin-top: 200px;
  }
 
- .col-sm-4.one_extra {
+ .col-sm-4.one_extra:hover {
    background: #C6EEE2;
  }
 
@@ -2063,6 +2056,18 @@ responsive
  }
 
  @media (max-width: 575.98px) {
+.hi_class{
+  padding: 0px;
+}
+  .prov-services_conatiner-ma{
+    background-color: #E5EAED;
+    height: 1000px;
+    padding: 0px !important;
+  }
+  .Are_Yousdf{
+    max-width: 50% !important;
+    height: 50% !important;
+   }
 
   .rightdiv_heading {
     height: 54px;
@@ -2193,3 +2198,20 @@ responsive
      float: right;
    }
  }
+
+ .prov-services_conatiner-ma{
+  background-color: #E5EAED;
+  height: 700px;
+  padding: 40px 216px 58px;
+ }
+ .Are_Yousdf{
+  max-width: 100% !important;
+ }
+ .hi_class{
+  padding: 10px;
+ }
+
+ .hi_class {
+  padding: 59px 52px 38px;
+  background: white;
+}
