--- a/src/assets/css/third-container.css
+++ b/src/assets/css/third-container.css
@@ -16,20 +16,7 @@
     border-radius: 15px;
     padding: 20px;
 }
-/* .user-data{
-width: 543px;
-height: 78px;
 
-background: #E8F8F2;
-border-radius: 10px;
-} */
-/* .user-data-data{
-    width: 543px;
-    height: 78px;
-    
-    background: #F4F4F4;
-    border-radius: 10px;  
-} */
 .img-data{
 width: 54.69px;
 height: 53.77px;
@@ -58,3 +45,6 @@ margin: 13px;
     font-size: 48px;  
     font-family: "Poppins";  
 }
+.hover-zoom:hover {
+    transform: scale(1.10);
+  }
