--- a/src/Component/Home/home.css
+++ b/src/Component/Home/home.css
@@ -175,19 +175,9 @@ color: #191919;
     text-align: center;
     color: #093F38;
 }
-/* .process {
-    position: absolute;
-width: 106px;
-height: 37px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 20px;
-line-height: 167.5%;
-margin-left: 20px;
-margin-top: 1px;
-text-align: center;
-letter-spacing: 0.06em;
-color: #3DC9A1;
-} */
+.img-wrapper{
+    overflow:hidden;
+  }
+  .hover-zoom:hover {
+    transform: scale(1.10);
+  }
