--- a/src/assets/css/clientreview.css
+++ b/src/assets/css/clientreview.css
@@ -1,53 +1,60 @@
 .client-review-container {
     display: flex;
     flex-direction: column;
-    padding: 6%;
-    justify-content: space-between;
+    box-sizing: border-box;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    padding: 3%;
+    background: #FFFFFF;
+    border: 1px solid #3DC9A1;
+    border-radius: 30px 30px 30px 0px;
+}
+
+.client-review-container:hover {
+    background-color: #3DC9A1;
 }
 
 .client-review {
-    position: absolute;
-    width: 415px;
-    height: 165px;
-    font-family: 'Poppins';
-    font-style: italic;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 167.5%;
-    /* or 27px */
-    color: #191919;
+    padding: 3%;
 }
 
 .cleints-personal {
     display: flex;
     flex-direction: row;
-    /* justify-content: space-evenly; */
+    padding: 1%;
+    justify-content: space-evenly;
 }
 
 .client-img {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    padding: 1%;
+    justify-content: space-between;
 }
 
 .images-client1 {
-    height: 58px;
-    width: 59px;
-    border-radius: 0px;
-    margin-top: 210%;
+    width: 30%;
+    margin: 5%;
 }
 
 .name-client1 {
-    position: absolute;
-    height: 49px;
-    width: 120px;
-    margin-top: 215%;
-    margin-left: 120%;
+    width: 70%;
+    margin: 5%;
 }
 
 .star-section {
-    width: 130px;
+    width: 100%;
     margin-top: 7%;
     margin-left: 14.8%;
     position: absolute;
-    
+}
+
+
+.rating-section {
+    width: 100%;
+    display: flex;
+    justify-content: right;
+    margin-right: 4%;
+    align-items:center;
 }
