--- a/src/assets/css/proservices.css
+++ b/src/assets/css/proservices.css
@@ -1,8 +1,6 @@
 .mainContainer {
     margin-top: 5%;
     margin-bottom: 5%;
-
-
 }
 
 .innerContainer {
@@ -11,14 +9,11 @@
     justify-content: space-evenly;
 }
 
-
-
-
 .left-Container {
     background: #C2DDE4;
     height: 520px;
     width: 650px;
-    background-image: url('../images/group-570.png');
+    /* background-image: url('../images/group-570.png'); */
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -147,6 +142,10 @@
     margin-top: 10%;
     height: 50%;
     width: 50%;
+}
+
+.arrow-img:hover {
+    transform: scale(1.2);
 }
 
 
