--- a/src/assets/css/third-container.css
+++ b/src/assets/css/third-container.css
@@ -48,3 +48,37 @@ margin: 13px;
 .hover-zoom:hover {
     transform: scale(1.10);
   }
+
+ 
+
+  .user-data {
+    background: #f4f4f4;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+    padding: 12px 22px;
+  }
+  .user-data.no-accordian {
+    background: #e8f8f2;
+  }
+  span {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #191919;
+  }
+  h3 {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 20px;
+    color: #191919;
+    margin: 0;
+  }
+  .meta-data {
+    margin-left: 10px;
+  }
+  .user-avatar {
+    width: 54px;
+    height: 54px;
+  }
