--- a/src/assets/css/templatemo-space-dynamic.css
+++ b/src/assets/css/templatemo-space-dynamic.css
@@ -2184,7 +2184,7 @@ span.button_arrow_handle {
 
 .connect-mobile {
   margin-top: 271px;
-  width: 50%;
+  /* width: 50%; */
   float: right;
 }
 
