--- a/src/assets/css/templatemo-space-dynamic.css
+++ b/src/assets/css/templatemo-space-dynamic.css
@@ -1963,6 +1963,8 @@ span.button_arrow_handle {
 
 .green-heading-two {
   color: #208c84;
+  font-size: 30px;
+  font-weight: 600;
 }
 
 .discounts-img {
