--- a/src/assets/css/proservices.css
+++ b/src/assets/css/proservices.css
@@ -13,7 +13,7 @@
     background: #C2DDE4;
     height: 520px;
     width: 650px;
-    background-image: url('../images/group-570.png');
+    /* background-image: url('../images/group-570.png'); */
     background-size: contain;
     background-repeat: no-repeat;
 }
